--- a/add_recipe.html
+++ b/add_recipe.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="form">
+      <div class="form" action="index.html">
         <h1>Add a Recipe</h1>
         <div class="form-content">
           <form>
