--- a/add_recipe.html
+++ b/add_recipe.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="form" action="index.html">
+      <div class="form">
         <h1>Add a Recipe</h1>
         <div class="form-content">
-          <form>
+          <form action="index.html">
                 <div class="form-group">
                     <label for="name">Recipe Name</label>
                     <input type="text" class="form-control" id="name">
