--- a/plan_meal.html
+++ b/plan_meal.html
@@ -85,6 +85,7 @@
     <div class="buttons">
         <button type="button" class="btn btn-success" onclick="window.location.href='print_meal_plan.html'">Print Meal Plan</button>
         <button type="button" class="btn btn-danger" onclick="window.location.href='shopping-list.html'">Generate Shopping List</button>
+          <button type="button" class="btn btn-dark" onclick="window.location.href='index.html'">Done</button>
     </div>
 
 
@@ -157,6 +158,7 @@
     <div class="buttons">
         <button type="button" class="btn btn-success" onclick="window.location.href='print_meal_plan.html'">Print Meal Plan</button>
         <button type="button" class="btn btn-danger" onclick="window.location.href='shopping-list.html'">Generate Shopping List</button>
+                  <button type="button" class="btn btn-dark" onclick="window.location.href='index.html'">Done</button>
     </div>
 </div>
 
@@ -226,6 +228,7 @@
     <div class="buttons">
         <button type="button" class="btn btn-success" onclick="window.location.href='print_meal_plan.html'">Print Meal Plan</button>
         <button type="button" class="btn btn-danger" onclick="window.location.href='shopping-list.html'">Generate Shopping List</button>
+                  <button type="button" class="btn btn-dark" onclick="window.location.href='index.html'">Done</button>
     </div>
 </div>
   <h2>Recipes</h2>
